- Add application Main function. - Add simulatorView with GUI design by scene builder. - Add some images such as the background of gas station and some cars. - Confirm that the JDK version is 17 instead of 23.